--- a/.github/workflows/update-php.yml
+++ b/.github/workflows/update-php.yml
@@ -1,4 +1,4 @@
-name: Update token (__hdnea__) in php.m3u
+name: Update token (__hdnea__) and Fancode live events
 
 on:
   schedule:
@@ -6,7 +6,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  update-token:
+  update-token-and-events:
     runs-on: ubuntu-latest
 
     steps:
@@ -15,7 +15,6 @@ jobs:
 
     - name: Fetch remote playlist and extract __hdnea__ token
       run: |
-        # Fetch JioTV playlist (for __hdnea__)
         curl -sL -o jio.m3u "https://raw.githubusercontent.com/alex4528/m3u/refs/heads/main/jstar.m3u"
         jio_cookie_line=$(grep -m1 '#EXTHTTP' jio.m3u)
         jio_cookie=$(echo "$jio_cookie_line" | grep -o '__hdnea__=[^"]*')
@@ -30,19 +29,31 @@ jobs:
 
         awk -v jio="$jio_cookie" -v jsonline="$jio_json" '
           {
-            # Replace JioTV cookie line
             if ($0 ~ /^#EXTHTTP:/) {
               print jsonline;
               next;
             }
 
-            # Replace __hdnea__ token (plain and URL-encoded)
             gsub(/__hdnea__=[^&"]+/, jio);
             gsub(/cookie=__hdnea__%3D[^&"]+/, "cookie=" jio);
 
             print;
           }
         ' php.m3u > temp.m3u && mv temp.m3u php.m3u
+
+    - name: Fetch Fancode.m3u and update php.m3u
+      run: |
+        curl -sL -o fancode.m3u "https://raw.githubusercontent.com/Jitendraunatti/fancode/refs/heads/main/data/fancode.m3u"
+
+        # Remove any old FANCode section if present (between custom markers)
+        sed -i '/#FANCODE-BEGIN/,/#FANCODE-END/d' php.m3u
+
+        # Add new updated FANCode section
+        {
+          echo "#FANCODE-BEGIN"
+          grep -A1 '^#EXTINF' fancode.m3u
+          echo "#FANCODE-END"
+        } >> php.m3u
 
     - name: Commit and push changes
       env:
@@ -51,5 +62,5 @@ jobs:
         git config --global user.name "github-actions[bot]"
         git config --global user.email "github-actions[bot]@users.noreply.github.com"
         git add php.m3u
-        git commit -m "Update __hdnea__ token in php.m3u" || echo "No changes"
+        git commit -m "Update __hdnea__ token and Fancode events in php.m3u" || echo "No changes"
         git push origin HEAD:main
