--- a/.github/workflows/update-php.yml
+++ b/.github/workflows/update-php.yml
@@ -1,82 +1,60 @@
-name: Update token (__hdnea__) and Fancode live events
+name: Fancode Events Auto-Update
 
 on:
   schedule:
-    - cron: '0 */12 * * *'  # every 12 hours
+    - cron: '0 */12 * * *' # every 12 hours
   workflow_dispatch:
 
 jobs:
-  update-token-and-events:
+  update-fancode:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repo
-      uses: actions/checkout@v2
+      - name: Checkout repo
+        uses: actions/checkout@v4
 
-    - name: Fetch remote playlist and extract __hdnea__ token
-      run: |
-        curl -sL -o jio.m3u "https://raw.githubusercontent.com/alex4528/m3u/refs/heads/main/jstar.m3u"
-        jio_cookie_line=$(grep -m1 '#EXTHTTP' jio.m3u)
-        jio_cookie=$(echo "$jio_cookie_line" | grep -o '__hdnea__=[^"]*')
+      - name: Fetch latest fancode.m3u and update php.m3u
+        run: |
+          # Fetch the raw fancode.m3u from GitHub
+          curl -sL -o fancode.m3u "https://raw.githubusercontent.com/drmlive/fancode-live-events/refs/heads/main/fancode.m3u"
 
-        echo "$jio_cookie_line" > jio_cookie_line.txt
-        echo "$jio_cookie" > jio_cookie.txt
+          # Remove previous Fancode section
+          sed -i '/#FANCODE-BEGIN/,/#FANCODE-END/d' php.m3u
 
-    - name: Replace token in php.m3u
-      run: |
-        jio_cookie=$(cat jio_cookie.txt)
-        jio_json=$(cat jio_cookie_line.txt)
+          # Start new Fancode block
+          echo "#FANCODE-BEGIN" > fancode_processed.m3u
+          echo "#EXTM3U" >> fancode_processed.m3u
 
-        awk -v jio="$jio_cookie" -v jsonline="$jio_json" '
-          {
-            if ($0 ~ /^#EXTHTTP:/) {
-              print jsonline;
-              next;
-            }
-
-            gsub(/__hdnea__=[^&"]+/, jio);
-            gsub(/cookie=__hdnea__%3D[^&"]+/, "cookie=" jio);
-
-            print;
-          }
-        ' php.m3u > temp.m3u && mv temp.m3u php.m3u
-
-    - name: Fetch Fancode.m3u and update php.m3u
-      run: |
-        curl -sL -o fancode.m3u "https://raw.githubusercontent.com/drmlive/fancode-live-events/refs/heads/main/fancode.m3u"
-
-        # Remove old Fancode section
-        sed -i '/#FANCODE-BEGIN/,/#FANCODE-END/d' php.m3u
-
-        echo "#FANCODE-BEGIN" > fancode_processed.m3u
-
-        awk '
-          BEGIN { RS=""; FS="\n" }
-          {
-            for (i=1; i<=NF; i++) {
-              if ($i ~ /^#EXTINF/) {
-                match($i, /,(.*)$/, arr)
-                name = arr[1]
-                gsub(/tvg-name="[^"]*"/, "", $i)   # Remove if exists
-                gsub(/tvg-logo="/, "tvg-name=\"" name "\" tvg-logo=\"", $i)
-                print $i >> "fancode_processed.m3u"
-                print $(i+1) >> "fancode_processed.m3u"
+          # Format each EXTINF block with proper tvg-name
+          awk '
+            BEGIN { RS=""; FS="\n" }
+            {
+              for (i = 1; i <= NF; i++) {
+                if ($i ~ /^#EXTINF:-1,/) {
+                  line = $i
+                  event = substr(line, index(line, ",") + 1)
+                  gsub(/^#EXTINF:-1,/, "#EXTINF:-1 tvg-name=\"" event "\"", line)
+                  print line >> "fancode_processed.m3u"
+                  print $(i+1) >> "fancode_processed.m3u"
+                }
               }
             }
-          }
-        ' fancode.m3u
+          ' fancode.m3u
 
-        echo "#FANCODE-END" >> fancode_processed.m3u
+          # End block marker
+          echo "#FANCODE-END" >> fancode_processed.m3u
 
-        cat fancode_processed.m3u >> php.m3u
-        rm fancode_processed.m3u
+          # Append to main M3U
+          cat fancode_processed.m3u >> php.m3u
 
-    - name: Commit and push changes
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      run: |
-        git config --global user.name "github-actions[bot]"
-        git config --global user.email "github-actions[bot]@users.noreply.github.com"
-        git add php.m3u
-        git commit -m "Update __hdnea__ token and Fancode events in php.m3u" || echo "No changes"
-        git push origin HEAD:main
+          # Cleanup
+          rm fancode_processed.m3u
+
+      - name: Commit and Push updated M3U
+        run: |
+          git config user.name "Fancode Bot"
+          git config user.email "actions@github.com"
+
+          git add php.m3u
+          git commit -m "🔁 Auto-update Fancode live events"
+          git push
