--- a/.github/workflows/update-php.yml
+++ b/.github/workflows/update-php.yml
@@ -33,10 +33,8 @@ jobs:
               print jsonline;
               next;
             }
-
             gsub(/__hdnea__=[^&"]+/, jio);
             gsub(/cookie=__hdnea__%3D[^&"]+/, "cookie=" jio);
-
             print;
           }
         ' php.m3u > temp.m3u && mv temp.m3u php.m3u
@@ -44,49 +42,29 @@ jobs:
     - name: Fetch Fancode.m3u and update php.m3u
       run: |
         curl -sL -o fancode.m3u "https://raw.githubusercontent.com/drmlive/fancode-live-events/refs/heads/main/fancode.m3u"
-
-        # Remove any old FANCode section if present (between custom markers)
         sed -i '/#FANCODE-BEGIN/,/#FANCODE-END/d' php.m3u
 
-        # Parse fancode.m3u and insert tvg-name with event name properly
         awk '
           BEGIN { print "#FANCODE-BEGIN" }
           /^#EXTINF/ {
             line = $0
-
-            # Remove existing tvg-name attribute if any
             gsub(/tvg-name="[^"]*"/, "", line)
-
-            # Look for last occurrence of '",' which typically precedes event name
-            event_pos = match(line, /",[^"]*$/)
-
-            if (event_pos > 0) {
-              # Extract event name (after '",')
-              ev_name = substr(line, event_pos+2)
-              gsub(/^ +| +$/, "", ev_name)
-
-              # Attributes part (before and including last quote)
-              attrs = substr(line, 1, event_pos+1)
-
-              # Insert tvg-name before the trailing quote
-              sub(/"$/, "\" tvg-name=\"" ev_name "\"", attrs)
-
-              print attrs
-            } else {
-              # Fallback: extract event name after last comma
-              last_comma = 0
-              for (i=length(line); i>0; i--) {
-                if (substr(line,i,1) == ",") {
-                  last_comma = i
-                  break
-                }
-              }
-              ev_name = substr(line, last_comma+1)
-              gsub(/^ +| +$/, "", ev_name)
-              sub(/^#EXTINF:-1,/, "#EXTINF:-1, tvg-name=\"" ev_name "\" ", line)
-              print line
+            # Find last comma NOT inside quotes
+            n = split(line, a, "")
+            inquote = 0
+            lastcomma = 0
+            for (i = 1; i <= n; i++) {
+              if (a[i] == "\"") inquote = !inquote
+              if (a[i] == "," && !inquote) lastcomma = i
             }
-
+            ev_name = substr(line, lastcomma+1)
+            gsub(/^ +| +$/, "", ev_name)
+            # Insert tvg-name="ev_name" after #EXTINF:-1,
+            attr = substr(line, 1, lastcomma-1)
+            rest = substr(line, lastcomma)
+            sub(/^,/, "", rest)
+            printf "#EXTINF:-1, tvg-name=\"%s\"%s\n", ev_name, attr
+            # Print the url line
             getline url
             print url
             next
