--- a/.github/workflows/update-json.yml
+++ b/.github/workflows/update-json.yml
@@ -1,4 +1,4 @@
-name: Update Jio (__hdnea__) + Zee5 (hdntl) tokens in final_channel.json
+name: Update Jio (__hdnea__) + Zee5 (hdntl) tokens in full_channels.json
 
 on:
   schedule:
@@ -25,7 +25,7 @@ jobs:
         zee_hdntl=$(grep -o 'hdntl=[^"]*' zee.m3u | head -n1)
         echo "$zee_hdntl" > zee_hdntl.txt
 
-    - name: Update tokens in final_channel.json
+    - name: Update tokens in full_channels.json
       run: |
         jio_cookie=$(cat jio_cookie.txt)
         zee_hdntl=$(cat zee_hdntl.txt)
@@ -44,7 +44,7 @@ jobs:
               .
             end
           )
-        ' final_channel.json > temp.json && mv temp.json final_channel.json
+        ' full_channels.json > temp.json && mv temp.json full_channels.json
 
     - name: Commit and push changes
       env:
@@ -52,7 +52,7 @@ jobs:
       run: |
         git config --global user.name "github-actions[bot]"
         git config --global user.email "github-actions[bot]@users.noreply.github.com"
-        git add final_channel.json
-        git commit -m "Auto-update __hdnea__ and hdntl tokens in final_channel.json" || echo "No changes"
+        git add full_channels.json
+        git commit -m "Auto-update __hdnea__ and hdntl tokens in full_channels.json" || echo "No changes"
         git push
         
