--- a/.github/workflows/update_vicky.yml
+++ b/.github/workflows/update_vicky.yml
@@ -39,4 +39,20 @@ jobs:
               .stream_url |= sub("cookie=__hdnea__=[^&]*"; "cookie=" + $jio)
             elif (.stream_url | test("zee5.com")) then
               .cookie = $zee |
-              .s
+              .stream_url |= sub("hdntl=[^&]*"; $zee)
+            else
+              .
+            end
+          )
+        ' vicky.json > temp.json && mv temp.json vicky.json
+
+    - name: Commit and push changes
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      run: |
+        git config --global user.name "github-actions[bot]"
+        git config --global user.email "github-actions[bot]@users.noreply.github.com"
+        git add vicky.json
+        git commit -m "Auto-update __hdnea__ and hdntl tokens in vicky.json" || echo "No changes"
+        git push
+        
