--- a/.github/workflows/update_kodi.yml
+++ b/.github/workflows/update_kodi.yml
@@ -1,4 +1,4 @@
-name: Update Jio (__hdnea__) + Zee5 (hdntl) tokens in converted_channels_with_sony_headers.m3u
+name: Update Jio (__hdnea__) + Zee5 (hdntl) tokens in kodi.m3u
 
 on:
   schedule:
@@ -25,18 +25,18 @@ jobs:
         zee_hdntl=$(grep -o 'hdntl=[^"]*' zee.m3u | head -n1)
         echo "$zee_hdntl" > zee_hdntl.txt
 
-    - name: Update tokens in converted_channels_with_sony_headers.m3u
+    - name: Update tokens in kodi.m3u
       run: |
         jio_cookie=$(cat jio_cookie.txt)
         zee_hdntl=$(cat zee_hdntl.txt)
 
         # Replace Jio (__hdnea__) in both Cookie headers and stream URLs
-        sed -i "s#__hdnea__=[^& ]*#${jio_cookie}#g" converted_channels_with_sony_headers.m3u
-        sed -i "s#cookie=__hdnea__=[^& ]*#cookie=${jio_cookie}#g" converted_channels_with_sony_headers.m3u
+        sed -i "s#__hdnea__=[^& ]*#${jio_cookie}#g" kodi.m3u
+        sed -i "s#cookie=__hdnea__=[^& ]*#cookie=${jio_cookie}#g" kodi.m3u
 
         # Replace Zee5 (hdntl) in both Cookie headers and stream URLs
-        sed -i "s#hdntl=[^& ]*#${zee_hdntl}#g" converted_channels_with_sony_headers.m3u
-        sed -i "s#cookie=hdntl=[^& ]*#cookie=${zee_hdntl}#g" converted_channels_with_sony_headers.m3u
+        sed -i "s#hdntl=[^& ]*#${zee_hdntl}#g" kodi.m3u
+        sed -i "s#cookie=hdntl=[^& ]*#cookie=${zee_hdntl}#g" kodi.m3u
 
     - name: Commit and push changes
       env:
@@ -44,6 +44,7 @@ jobs:
       run: |
         git config --global user.name "github-actions[bot]"
         git config --global user.email "github-actions[bot]@users.noreply.github.com"
-        git add converted_channels_with_sony_headers.m3u
-        git commit -m "Auto-update __hdnea__ and hdntl tokens in converted_channels_with_sony_headers.m3u" || echo "No changes"
+        git add kodi.m3u
+        git commit -m "Auto-update __hdnea__ and hdntl tokens in kodi.m3u" || echo "No changes"
         git push
+        
